--- a/Sweets.html
+++ b/Sweets.html
@@ -367,7 +367,7 @@
                     &#x00A9; <a href="#">Akshaya Sweets</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    Designed By <a href="https:/digipondy.in">Digi pondy</a>
+                    Designed By <a href="#">sathish</a>
                 </div>
             </div>
         </div>
