--- a/service.html
+++ b/service.html
@@ -292,7 +292,7 @@
                     &copy; <a href="#">Akshaya Sweets</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    Designed By <a href="https:/digipondy.in">Digi Pondy</a>
+                    Designed By <a href="#">sathish</a>
                 </div>
             </div>
         </div>
